Update SquarePyramid.java